--- a/app/src/sass/style.scss
+++ b/app/src/sass/style.scss
@@ -1,105 +1,282 @@
 $lightBlue: #2792c4;
+* {
+	box-sizing: border-box;
+}
 
+html {
+	font-family: 'Merriweather', serif;
+}
+body {
+	margin: 0;
+	background: radial-gradient(circle, #0c0c16, #161616);
+	color: #e5e5e1;
+	padding: 0.5em;
+}
 .app {
-    display: flex;
-    justify-content: center;
-    .container{
-        width: 1024px;
-        //login & register
-        .link {
-            text-decoration: none;
-            color: inherit;
-        }
-        .auth {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background-color: $lightBlue;
-            form {
-                display: flex;
-                flex-direction: column;
-                padding: 2em;
-                width: 30%;
-                gap: 0.5em;
-                background-color: #fff;
-                button {
-                    padding: 0.5em 0em;
-                    border: none;
-                    background-color: #a5abcc;
-                    color: #fff;
-                    cursor: pointer;
-                }
-                span {
-                    font-size: 1rem;
-                    text-align: center;
-                }
-            }
-        }
-        
-    }
+	display: flex;
+	justify-content: center;
 
-    .navbar {
-        nav {
-            padding: 2em 0em;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-           
-            .links {
-                display: flex;
-                align-items: center;
-                gap: 1em;
-            }
-        }
-    }
-    footer {
-        margin-top: 100px;
-        padding: 1em;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: #bbccd3;
+	.container {
+		width: 1024px;
+		//login & register
+		.link {
+			text-decoration: none;
+			color: inherit;
+		}
+		.auth {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			height: 100vh;
+			form {
+				display: flex;
+				flex-direction: column;
+				padding: 2em;
+				width: 30%;
+				gap: 0.5em;
+				background-color: #fff;
+				button {
+					padding: 0.5em 0em;
+					border: none;
+					background: rgba(34, 164, 195, 1);
+					background: linear-gradient(
+						0deg,
+						rgba(34, 164, 195, 1) 100%,
+						rgba(25, 163, 116, 1) 0%
+					);
+					text-decoration: none;
+					color: #e5e5e1;
+					padding: 0.5rem 1rem;
+					border-radius: 4px;
+					color: #fff;
+					cursor: pointer;
+				}
+				button:hover {
+					background: rgb(25, 163, 116);
+					background: linear-gradient(
+						0deg,
+						rgba(25, 163, 116, 1) 0%,
+						rgba(34, 164, 195, 1) 100%
+					);
+				}
+				span {
+					font-size: 1rem;
+					text-align: center;
+				}
+			}
+		}
+	}
 
-        .vermenea {
-            color: $lightBlue;
-        }
-    }
-    .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {
-            height: 120px;
-        }
+	.navbar {
+		nav {
+			padding: 2em 0em;
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
 
-    }
-    .home {
-        .posts {
-            margin-top: 50px;
-            display: flex;
-            flex-direction: column;
-            gap: 4em;
-            .post {
-                display: flex;
-                justify-content: start;
-                &:nth-child(2n+1){
-                    flex-direction: row-reverse;
-                }
-                .img {
-                    flex: 2;
-                    img {
-                        width: 100%;
-                        max-height: min-content;
-                    }
-                }
-                .content {
-                    flex: 3;
-                }
+			.links {
+				display: flex;
+				align-items: center;
+				gap: 1em;
+				.auth-link {
+					border: none;
+					background: rgba(34, 164, 195, 1);
+					background: linear-gradient(
+						0deg,
+						rgba(34, 164, 195, 1) 100%,
+						rgba(25, 163, 116, 1) 0%
+					);
+					text-decoration: none;
+					color: #e5e5e1;
+					padding: 0.2rem 0.8rem;
+					border-radius: 4px;
+					cursor: pointer;
+				}
+				.auth-link:hover {
+					border: none;
+					background: rgb(25, 163, 116);
+					background: linear-gradient(
+						0deg,
+						rgba(25, 163, 116, 1) 0%,
+						rgba(34, 164, 195, 1) 100%
+					);
+				}
+				.user {
+					font-weight: bolder;
+					background: rgb(25, 163, 116);
+					background: linear-gradient(
+						0deg,
+						rgba(25, 163, 116, 1) 0%,
+						rgba(34, 164, 195, 1) 100%
+					);
+					-webkit-background-clip: text;
+					-webkit-text-fill-color: transparent;
+					background-clip: color;
+				}
+				.write {
+					a {
+						text-decoration: none;
+						color: #e5e5e1;
+						padding: 0.2rem 0.8rem;
+						border-radius: 4px;
+						border: none;
+						background: rgb(25, 163, 116);
+						background: linear-gradient(
+							0deg,
+							rgba(25, 163, 116, 1) 0%,
+							rgba(34, 164, 195, 1) 100%
+						);
+					}
+					a:hover {
+						background: rgba(34, 164, 195, 1);
+						background: linear-gradient(
+							0deg,
+							rgba(34, 164, 195, 1) 100%,
+							rgba(25, 163, 116, 1) 0%
+						);
+					}
+				}
+			}
+		}
+	}
+	.logo {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		img {
+			height: 80px;
+		}
+	}
+	.blog {
+		.posts {
+			margin-top: 50px;
+			display: flex;
+			flex-direction: column;
+			gap: 4em;
+			.post {
+				display: flex;
+				justify-content: start;
+				&:nth-child(2n + 1) {
+					flex-direction: row-reverse;
+				}
+				.img {
+					flex: 2;
+					img {
+						width: 100%;
+						max-height: min-content;
+					}
+				}
+				.content {
+					flex: 3;
+					padding: 0em 1em;
+				}
+				.article-page {
+					background: rgba(34, 164, 195, 1);
+					background: linear-gradient(
+						0deg,
+						rgba(34, 164, 195, 1) 100%,
+						rgba(25, 163, 116, 1) 0%
+					);
+					text-decoration: none;
+					color: #e5e5e1;
+					padding: 0.5rem 1rem;
+					border-radius: 4px;
+				}
+				.article-page:hover {
+					background: rgb(25, 163, 116);
+					background: linear-gradient(
+						0deg,
+						rgba(25, 163, 116, 1) 0%,
+						rgba(34, 164, 195, 1) 100%
+					);
+				}
+			}
+		}
+	}
+	.wrapper {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 6em;
 
-            }
-           
-        }
-    }
+		.home {
+			display: flex;
+			flex-direction: column;
+			justify-content: space-evenly;
+			align-items: center;
+			min-height: 50vh;
+			.header {
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				font-size: 1.5rem;
+				.heading {
+					display: flex;
+					justify-content: space-evenly;
+					align-items: center;
+				}
+				.strong {
+					background: rgb(25, 163, 116);
+					background: linear-gradient(
+						0deg,
+						rgba(25, 163, 116, 1) 0%,
+						rgba(34, 164, 195, 1) 100%
+					);
+					-webkit-background-clip: text;
+					-webkit-text-fill-color: transparent;
+					background-clip: color;
+				}
+			}
+		}
+		.home a {
+			background: rgb(25, 163, 116);
+			background: linear-gradient(
+				0deg,
+				rgba(25, 163, 116, 1) 0%,
+				rgba(34, 164, 195, 1) 100%
+			);
+			text-decoration: none;
+			color: #e5e5e1;
+			padding: 0.5rem 1rem;
+			border-radius: 4px;
+		}
+		.home a:hover {
+			background: rgba(34, 164, 195, 1);
+			background: linear-gradient(
+				0deg,
+				rgba(34, 164, 195, 1) 100%,
+				rgba(25, 163, 116, 1) 0%
+			);
+			text-decoration: none;
+			color: #e5e5e1;
+			padding: 0.5rem 1rem;
+			border-radius: 4px;
+		}
+	}
+	.footer {
+		margin-top: 100px;
+		padding: 1em;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	.footer a {
+		text-decoration: none;
+		color: rgb(255, 255, 255);
+	}
+	.socials {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		.icon {
+			margin: 1em;
+			transition: transform 0.4s ease-in-out;
+		}
+		.icon:hover {
+			transform: rotate(30deg);
+		}
+	}
 }
